# ObsidianSync

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backups/: admin.py  apps.py  models.py  views.py
backups/management/commands/: run_due_snapshots.py  run_snapshot_scheduler.py
backups/migrations/: 0001_initial.py  0002_documentrevision_parent_revision.py  0003_documentrevision_branch_name.py  0004_vaultdocument_active_branch.py
backups/services/: history.py  revisions.py  snapshots.py
config/: env.py  settings.py  urls.py
docker/: entrypoint.sh
templates/admin/: index.html  login.html
templates/admin/backups/: revision_graph.html
