[tool.poetry]
name = "obsidian-sync"
version = "0.1.0"
description = "Django-based backup manager for Obsidian vaults"
authors = ["Karol"]
readme = "README.md"
packages = [
  { include = "config" },
  { include = "backups" }
]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.6"
django-unfold = "^0.58.0"
pydantic = "^2.11.3"
pydantic-settings = "^2.8.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.4"

[tool.poetry.scripts]
obsidian-sync = "manage:main"

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [
  "backups/migrations",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "DJ"]
ignore = ["E501", "DJ012"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
